Added corrections to the displayed data

--- a/users/templates/users/withdrawals_tab.html
+++ b/users/templates/users/withdrawals_tab.html
@@ -21,13 +21,13 @@
 
             <div class="col-12 col-lg-6">
                 <header
-                    class="h4 alert alert-danger"
+                    class="h5 alert alert-info"
                 >
-                    <i class="bi bi-exclamation-triangle text-danger"></i>
+                    <i class="bi bi-exclamation-triangle-fill text-danger"></i>
                     Please Make sure your wallet address are correct
                     as selected.
                 </header>
-                <div class="p-3 bg-white table-responsive">
+                <div class="p-3 table-responsive">
                     <table class="table table-striped table-hover">
                         <tr>
                             <td>
@@ -82,7 +82,7 @@
          <section class="row pt-5">
             <div class="col-12 table-responsive p-3 bg-white rounded-4">
                 <table class="table mt-4 table-hover">
-                    <thead class="table-primary">
+                    <thead class="table-info">
                         <tr>
                             <th scope="col">WITHDRAWAL'S CODE</th>
                             <th scope="col">From</th>
