--- a/users/templates/users/dashboard_tab.html
+++ b/users/templates/users/dashboard_tab.html
@@ -80,7 +80,7 @@
                                     aria-expanded="{% if forloop.first %}true{% else %}false{% endif %}" 
                                     aria-controls="collapse{{new.id}}"
                                 >
-                                    <i class="bi bi-bell-fill text-primary me-2"></i>
+                                    <i class="bi bi-bell-fill me-2" style="color: #FFD700;"></i>
                                   {{new.title |upper}}
                                 </button>
                               </h2>
