--- a/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
+++ b/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
@@ -13,8 +13,8 @@
                     <i class="bi bi-briefcase-fill me-2"></i>
                     
                     <div class="pt-3"> 
-                        <b>48</b>
-                        <h5>Total Requests</h5>
+                        <h4>48</h4>
+                        <p>Total Requests</p>
                     </div>
                 </div>
             </div>
@@ -23,8 +23,8 @@
                 <div class="shadow-sm summary p-3 text-center">
                     <i class="bi bi-briefcase me-2"></i>
                     <div class="pt-3"> 
-                        <b>48</b>
-                        <h5>Pending Requests</h5>
+                        <h4>48</h4>
+                        <p>Pending Requests</p>
                     </div>
                 </div>
             </div>
@@ -33,8 +33,8 @@
                 <div class="shadow-sm summary p-3 text-center">
                     <i class="bi bi-briefcase me-2"></i>
                     <div class="pt-3">
-                        <b>$4,800</b> 
-                        <h5>Approved</h5>
+                        <h4>$4,800</h4> 
+                        <p>Approved</p>
                     </div>
                 </div>
             </div>
@@ -43,8 +43,8 @@
                 <div class="shadow-sm summary p-3 text-center">
                     <i class="bi bi-briefcase me-2"></i>
                     <div class="pt-3"> 
-                        <b>$41, 700</b>
-                        <h5>Pending Amount</h5>
+                        <h4>$41, 700</h4>
+                        <p>Pending Amount</p>
                     </div>
                 </div>
             </div>
