Put the link to faq

--- a/users/templates/users/client_sidebar.html
+++ b/users/templates/users/client_sidebar.html
@@ -96,9 +96,9 @@
           class="nav-link" 
           id="tab-faq" 
           data-bs-toggle="pill" 
-          href="#content-faq" 
+          href="#faq-profile" 
           role="tab" 
-          aria-controls="content-faq" 
+          aria-controls="faq-profile" 
           aria-selected="false"
       >
           <i class="bi bi-question-circle-fill"></i>
