Put its own on the tab section

--- a/users/templates/users/client_dashboard.html
+++ b/users/templates/users/client_dashboard.html
@@ -19,4 +19,8 @@
 <div class="tab-pane fade" id="content-profile" role="tabpanel" aria-labelledby="tab-profile">
     {% include 'users/profile_tab.html' %}
 </div>
+
+<div class="tab-pane fade" id="faq-profile" role="tabpanel" aria-labelledby="tab-faq">
+    {% include 'users/faq_tab.html' %}
+</div>
 {% endblock content %}
