--- a/users/templates/users/withdrawals_tab.html
+++ b/users/templates/users/withdrawals_tab.html
@@ -8,7 +8,7 @@
                     <h3>Request Withdrawals</h3>
                 </legend>
                 {% if user.profiles.usdt_wallet or user.profiles.bitcoin_wallet or user.profiles.ethereum_wallet %}
-                <form method="post" class="p-5 border bg-light">
+                <form method="post" class="p-5 bg-light border">
                     {% csrf_token %}
                     {% crispy withdrawal_form %}
                 </form>
