display the accurate pending and active withdrawal requests

--- a/admin_portal/templates/admin_portal/investments_admin_tab.html
+++ b/admin_portal/templates/admin_portal/investments_admin_tab.html
@@ -23,7 +23,7 @@
                 <div class="shadow-sm summary  text-center">
                     <i class="bi bi-briefcase-fill me-2 text-success"></i>
                     <div class="pt-2"> 
-                        <h4>{{total_active}}</h4>
+                        <h4>{{total_active_investments}}</h4>
                          <p>Active Investments</p>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
                 <div class="shadow-sm summary  text-center">
                     <i class="bi bi-briefcase-fill me-2 text-warning"></i>
                     <div class="pt-2"> 
-                        <h4>{{total_pending}}</h4>
+                        <h4>{{total_pending_investments}}</h4>
                          <p>PendingInvestments</p>
                     </div>
                 </div>
