--- a/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
+++ b/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
@@ -10,7 +10,7 @@
         <section class="row gy-5">
             <div class="col-6 col-md-3">
                 <div class="shadow-sm summary rounded-3 p-3 text-center">
-                    <i class="bi bi-briefcase-fill me-2"></i>
+                    <i class="bi bi-credit-card-2-back me-2"></i>
                     
                     <div class="pt-3"> 
                         <h4>48</h4>
@@ -21,7 +21,7 @@
 
             <div class="col-6 col-md-3">
                 <div class="shadow-sm summary p-3 text-center">
-                    <i class="bi bi-briefcase me-2"></i>
+                    <i class="bi bi-hourglass-split me-2"></i>
                     <div class="pt-3"> 
                         <h4>48</h4>
                         <p>Pending Requests</p>
@@ -31,7 +31,7 @@
 
             <div class="col-6 col-md-3">
                 <div class="shadow-sm summary p-3 text-center">
-                    <i class="bi bi-briefcase me-2"></i>
+                    <i class="bi bi-check-circle-fill me-2"></i>
                     <div class="pt-3">
                         <h4>$4,800</h4> 
                         <p>Approved</p>
@@ -41,7 +41,7 @@
 
             <div class="col-6 col-md-3">
                 <div class="shadow-sm summary p-3 text-center">
-                    <i class="bi bi-briefcase me-2"></i>
+                    <i class="bi bi-clock-history me-2"></i>
                     <div class="pt-3"> 
                         <h4>$41, 700</h4>
                         <p>Pending Amount</p>
