deactivated the button in list of plans

--- a/admin_portal/templates/admin_portal/plans_admin_tab.html
+++ b/admin_portal/templates/admin_portal/plans_admin_tab.html
@@ -33,12 +33,12 @@
                     </div>
                     <div class="col-lg-2 d-flex align-items-center justify-content-center">
                         <div class="text-center">
-                            <a 
-                                href="{% url 'buy_investment' plan.name %}" 
-                                class="btn btn-lg btn-primary shadow-sm"
+                            <button
+                                class="btn btn-lg btn-secondary shadow-sm"
+                                disabled
                             >
                                 Active Investments
-                            </a>
+                            </button>
                         </div>
                     </div>
                 </div>
