--- a/admin_portal/templates/admin_portal/referrals_admin_tab.html
+++ b/admin_portal/templates/admin_portal/referrals_admin_tab.html
@@ -3,7 +3,7 @@
     <div class="container">
         <section class="row gy-5 py-4">
             <div class="col-12">
-                <h3>Admin / Referrals</h3>
+                <h3>Admin / Users & Referrals</h3>
             </div>
         </section>
 
@@ -25,7 +25,7 @@
                 <a href="#" class="d-flex shadow-sm border border-primary p-2">
                     <i class="bi bi-wallet2 text-primary" style="font-size: 24px;"></i>
                     <div class="ps-4">
-                        <p><b>{{total_active}}</b></p>
+                        <p><b>{{total_active_users}}</b></p>
                         <p>Active Users</p>   
                     </div>
                 </a>
@@ -34,7 +34,7 @@
                 <a href="#" class="d-flex shadow-sm border border-danger p-2">
                     <i class="bi bi-wallet2 text-danger" style="font-size: 24px;"></i>
                     <div class="ps-4">
-                        <p><b>{{total_inactive}}</b></p>
+                        <p><b>{{total_inactive_users}}</b></p>
                         <p>Inactive Users</p>   
                     </div>
                 </a>
