--- a/users/templates/users/dashboard_tab.html
+++ b/users/templates/users/dashboard_tab.html
@@ -25,7 +25,7 @@
                         <i class="bi bi-coin"></i>
                         <div class="ps-4">
                             <p>Total Profits</p>
-                            <p><b>{{total_profits}}</b></p>
+                            <p><b>${{total_profits}}</b></p>
                         </div>
                     </a>
                 </div>
@@ -35,7 +35,7 @@
                         <i class="bi bi-people"></i>
                         <div class="ps-4">
                             <p>Total Referrals</p>
-                            <p><b>{{total_referrals}}</b></p>
+                            <p><b>${{total_referrals}}</b></p>
                         </div>
                     </a>
                 </div>
@@ -55,7 +55,7 @@
                         <i class="bi bi-currency-bitcoin"></i>
                         <div class="ps-4">
                             <p>Referrals Earnings</p>
-                            <p><b>{{total_bonuses}}</b></p>
+                            <p><b>${{total_bonuses}}</b></p>
                         </div>
                     </a>
                 </div>
