adjusted my notifications

--- a/admin_portal/templates/admin_portal/notifications_admin_tab.html
+++ b/admin_portal/templates/admin_portal/notifications_admin_tab.html
@@ -3,14 +3,14 @@
 
 <section>
     <div class="container">
-        <section class="row gy-5 py-4">
+        <section class="row gy-5">
             <div class="col-12">
                 <h3> Admin / Notifications </h3>
             </div>
         </section>
 
         <section class="row gy-5">
-            <div class="col-12 col-md-7">
+            <div class="col-12 col-md-10 mx-auto">
                 <form 
                     class="mt-4 mb-5 p-5 border rounded-3" 
                     action="" 
