adjust the display of profits

--- a/users/templates/users/dashboard_tab.html
+++ b/users/templates/users/dashboard_tab.html
@@ -184,7 +184,7 @@
                                             Daily Profit:
                                         </td>
                                         <td class="text-end">
-                                            <b><sup>$</sup>{{investment.daily_profits}}</b>
+                                            <b><sup>$</sup>{{investment.daily_profit}}</b>
                                         </td>
                                     </tr>
 
