--- a/users/templates/users/dashboard_tab.html
+++ b/users/templates/users/dashboard_tab.html
@@ -26,8 +26,8 @@
                     <a href="" class="d-flex summary shadow-sm">
                         <i class="bi bi-briefcase"></i>
                         <div class="ps-4">
-                            <p>Active Plans</p>
-                            <p><b>{{total_plans}}</b></p>
+                            <p>Investment Amount</p>
+                            <p><b>${{invested_amount}}</b></p>
                         </div>
                     </a>
                 </div>
@@ -35,7 +35,7 @@
                     <a href="#" class="d-flex summary shadow-sm">
                         <i class="bi bi-coin"></i>
                         <div class="ps-4">
-                            <p>Total Profits</p>
+                            <p>Profits Balance</p>
                             <p><b>${{total_profits}}</b></p>
                         </div>
                     </a>
@@ -46,16 +46,6 @@
                         <i class="bi bi-people"></i>
                         <div class="ps-4">
                             <p>Total Referrals</p>
-                            <p><b>${{total_referrals}}</b></p>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <a href="#" class="d-flex summary shadow-sm">
-                        <i class="bi bi-wallet2"></i>
-                        <div class="ps-4">
-                            <p>Withdrawals Amount</p>
                             <p><b>{{total_referrals}}</b></p>
                         </div>
                     </a>
@@ -67,6 +57,16 @@
                         <div class="ps-4">
                             <p>Referrals Earnings</p>
                             <p><b>${{total_bonuses}}</b></p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <a href="#" class="d-flex summary shadow-sm">
+                        <i class="bi bi-wallet2"></i>
+                        <div class="ps-4">
+                            <p>Withdrawals Requests</p>
+                            <p><b>{{total_referrals}}</b></p>
                         </div>
                     </a>
                 </div>
