changed the display

--- a/users/templates/users/profile_tab.html
+++ b/users/templates/users/profile_tab.html
@@ -15,7 +15,7 @@
                         {% crispy profile_form %}
 
                         <div>
-                            <button class="btn-1 btn" type="submit">
+                            <button class="btn-1 btn" type="submit" name="user_form_submit">
                                 UPDATE PROFILE
                             </button>
                         </div>
