Adjusted logo images

--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -45,10 +45,9 @@
         <!-- Navbar Brand -->
         <a class="navbar-brand" href="/">
           <img
-            src="{% static 'investments/img/Logo_icon.svg' %}"
+            src="{% static 'images/logo.PNG' %}"
             alt="Riaz Wealth"
-            width="80%"
-            style="margin: auto; padding: 0.2em 1em 0em"
+            style="margin: auto; padding: 0.2em 1em 0em; width: 150px; height: 50px; object-fit:cover"
             class="d-inline-block align-text-top img-fluid"
           />
         </a>
